--- a/backend/package.json
+++ b/backend/package.json
@@ -12,20 +12,23 @@
     "seed": "node src/seed.js"
   },
   "dependencies": {
-    "@socket.io/redis-adapter": "^8.2.0",
+    "@socket.io/redis-adapter": "^8.3.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.8.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "express-rate-limit": "^7.4.0",
-    "helmet": "^7.1.0",
+    "cors": "^2.8.6",
+    "dotenv": "^16.6.1",
+    "express": "^4.22.1",
+    "express-rate-limit": "^7.5.1",
+    "helmet": "^7.2.0",
     "joi": "^17.13.3",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.6.1",
-    "morgan": "^1.10.0",
-    "redis": "^4.7.0",
-    "socket.io": "^4.7.5",
-    "validator": "^13.12.0"
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^8.23.0",
+    "morgan": "^1.10.1",
+    "redis": "^4.7.1",
+    "socket.io": "^4.8.3",
+    "validator": "^13.15.26"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^3.0.0"
   }
 }
