--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,6 @@ JWT_SECRET=replace_with_strong_secret
 JWT_EXPIRES_IN=1d
 REDIS_URL=redis://localhost:6379
 CORS_ORIGIN=http://localhost:5173
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_cloudinary_api_key
+CLOUDINARY_API_SECRET=your_cloudinary_api_secret
